--- a/style.css
+++ b/style.css
@@ -79,3 +79,16 @@ footer {
   margin-top: 3rem;
   font-size: 0.9rem;
 }
+
+.video-block {
+  background-color: #000;
+  padding: 2rem;
+  text-align: center;
+  border-bottom: 2px solid #333;
+  margin-top: 0;
+}
+
+.video-block h2 {
+  color: #f44336;
+  margin-bottom: 1rem;
+}
